@@ -7,6 +7,7 @@ XXX
 	  - PMEMOBJ_IGNORE_DIRTY_SHUTDOWN and PMEMOBJ_IGNORE_BAD_BLOCKS are required to acknowledge the understanding of what production-critical functions are missing for the build without NDCTL
 	- does not allow opening pmem pool without unsafe shoutdown counter if not explicitly disabled
 	- remove support for build time define NO_LIBPTHREAD
+	- Exclude Valgrind checks during compilation time when VG_XXX_ENABLED is set to 0
 
 Mon Dec 4 2023 Oksana Sałyk <oksana.salyk@intel.com>
 
